# TrellisKV

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/trelliskv/: cluster_state.h  connection_pool.h  gossip_message.h  gossip_protocol.h  hash_ring.h  json_serializer.h  logger.h  messages.h  network_manager.h  node_config.h  node_info.h  read_result.h  replication_manager.h  replication_request.h  request_router.h  result.h  storage_engine.h  tcp_client.h  thread_pool.h  trellis_node.h  types.h  versioned_value.h  write_operation.h
src/: connection_pool.cpp  gossip_message.cpp  gossip_protocol.cpp  hash_ring.cpp  json_serializer.cpp  logger.cpp  main.cpp  messages.cpp  network_manager.cpp  replication_manager.cpp  request_router.cpp  storage_engine.cpp  tcp_client.cpp  thread_pool.cpp  trellis_node.cpp
src/cli/: main.cpp
